--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: row;
 }
 
 .App-logo {
@@ -16,18 +18,24 @@
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
+  min-width: 15vw;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  writing-mode: vertical-rl;
 }
 
 .App-link {
   color: #61dafb;
 }
 
+.cluesection {
+  flex-direction: column;
+  width: 100%;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
